--- a/public/landing.css
+++ b/public/landing.css
@@ -1,6 +1,6 @@
 body {
     position: relative;
-    overflow-y: scroll;
+    overflow-y: hidden;
     overflow-x: hidden;
     width: 100%;
     height: 1092.33px;
@@ -80,6 +80,9 @@ body {
     width: 100%;
     margin-bottom: 28px;
 }
+.label-container>h2{
+    text-align: center;
+}
 
 .inputError {
     position: relative;
@@ -110,6 +113,7 @@ body {
 }
 
 .field {
+
     position: relative;
     width: 274px;
     height: 32px;
@@ -121,7 +125,7 @@ body {
     background-color: transparent;
 }
 
-#login-button {
+input[type="button"]{
     position: relative;
     width: 100%;
     height: 100%;
@@ -133,6 +137,9 @@ body {
     text-align: center;
     padding: 0;
     font-size: 16px;
+}
+input[type="button"]:active{
+    background-color: rgb(161, 0, 0);
 }
 
 .checkbox-row {
@@ -205,7 +212,7 @@ input#remember-me:focus {
     color: white;
     transition: font-size 100ms ease, top 100ms ease, opacity 100ms ease;
 }
-input[type="email"], input[type="password"]{
+input{
     cursor: text;
     user-select: none;
     font-size: 16px;
@@ -439,4 +446,13 @@ footer {
     top: 12px;
     left: 12px;
     width: 25px;
+}
+
+.text-container{
+    color: white;
+}
+
+.buttons-container{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
 }
